# pymath

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py
pymath/: __init__.py  __init__.pyi  pymath.c  pymath.md  pymath.py  pymath.pyi  pymathmodule.c
tests/: pymath_py.py  test_pymath.py  utils.py
