[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pymath"
version = "1.0.0"
requires-python = ">=3.6"

[tool.setuptools]
ext-modules = [{name = "pymath", sources = ["pymath/pymath.c"]}]
packages = []

[tool.setuptools.data-files]
"lib/site-packages" = ["pymath/pymath.py", "pymath/pymath.pyi"]
